<resources>
    <string name="app_name">Movies</string>


    <!-- Todo: Make a Hindi String Xml as well-->
    <!--Todo:Make Snackbar for register page-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">CLOSE</string>
    <string name="policy">.Copyright \t Policy.</string>
    <string name="navopen">Navigation Open</string>
    <string name="navclose">Navigation close</string>
    <string name="searchicon">Search</string>
    <string name="selectType">Select Type(Optional)</string>
    <string name="batman">Batman</string>

    <!--AppDrawer Texts-->
    <string name="genre">Genre</string>
    <string name="Action">ACTION</string>
    <string name="Comedy">COMEDY</string>
    <string name="Hollywood">HOLLYWOOD</string>
    <string name="Kids">KIDS</string>
    <string name="Animated">ANIMATED</string>
    <string name="horror">HORROR</string>
    <string name="Anime">ANIME</string>
    <string name="bollywood">BOLLYWOOD</string>


    <string name="More_Option">More Options</string>
    <string name="about">About/FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="reportBugs">Report Bugs</string>
    <string name="HelpAndSupport">Help &amp; Suppport</string>
    <string name="logout">Logout</string>

    <!--Navigation Bar Text-->
    <string name="Home">Home</string>
    <string name="Latest">Latest</string>
    <string name="Search">SEARCH</string>
    <string name="Subscription">Subscriptions</string>
    <string name="Favorites">Favorites</string>
    <string name="Toprated">Top Rated</string>

    <!--CarouselView Names-->
    <string name="pic1">SHAZAM</string>
    <string name="pic2">DEADPOOL</string>
    <string name="pic3">OBLIVION</string>
    <string name="pic4">BHAAGI 3</string>
    <string name="pic5">INSIDE OUT</string>
    <string name="pic6">BAHUBALI</string>
    <string name="pic7">DEATHNOTE</string>

    <!--CardText-->
    <string name="Developer">Developed by-</string>
    <string name="name">Manvendra Singh</string>
    <string name="version">1.0.0</string>
    <string name="Rating">Rating </string>

    <!--BugsLayout-->
    <string name="to">Recipient email(s)</string>
    <string name="subjects">Subject</string>
    <string name="message">Message</string>
    <string name="send">SEND E-Mail</string>

    <!--TemproryText-->
    <string name="yourname">Your Name</string>
    <string name="youemailid">Your E-mail ID</string>
    <string name="contentDescription">NOthing</string>
    <string name="demo">This line contains some useless text which is of no use to you so do not even waste your time on it go away gay</string>

    <!--Menu item-->
    <string name="Quit">Close the App</string>
    <string name="Logout">Logout</string>
    <string name="search">Movie Name</string>
    <string name="option">OPTION</string>

    <!--MoviePlayer-->
    <string name="MovieName">Movie Name </string>
    <string name="year">2019</string>
    <string name="agegroup">13</string>
    <string name="starring">Starring-</string>
    <string name="director">Director-</string>
    <string name="des">a long description about movie goes here and it is the part which gives a brief information about the movie and few spoilers so plz stop reading this</string>


    <!--Login Page-->
    <string name="Ques1">How would you like to login?</string>
    <string name="username">Username</string>
    <string name="conti">Continue</string>
    <string name="error">Error!  Check your internet connection and Try restarting the App</string>
    <string name="yearSearch">Year(Optional)</string>
    <string name="searchButtonMain">search</string>
    <string name="title">Title</string>
    <string name="moreinfo">moreinfo</string>
    <string name="animated">ANIMATED</string>
    <string name="comdey">COMEDY</string>
    <string name="status">Not Completed yet</string>
    <string name="anime">ANIME</string>
    <string name="About">A simple movie app which displays information about movies.You can search and add favorites to your list. You can check from the pre loaded list of movies which are on home, Genre, latest and Top rated page. I am at beginner level so cannot make a perfect efficiently coded app so you may find bugs. Bugs can be sent through e-mail in the bugs section  </string>
    <string name="top_ten_highest_rated_movies">Top Ten Highest Rated Movies</string>
</resources>
