<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/bugsLayout">


    <EditText
        android:textStyle="italic"
        android:id="@+id/emailB"
        android:textColor="#90E9F3"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"/>

    <EditText
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:hint="@string/subjects"
        android:id="@+id/subjectB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="#90e9f3"/>
    <EditText
        android:inputType="text|textMultiLine"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:id="@+id/messageB"
        android:textColor="#A7ECF4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/message"
        android:gravity="start"/>

    <Button
        android:elevation="12dp"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonB"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#1F6780"
        android:text="@string/send"/>



</LinearLayout>