<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/frag1"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <VideoView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        android:id="@+id/videoview"/>

    <TextView
        android:id="@+id/textV1"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-thin"
        android:text="@string/MovieName"/>

    <LinearLayout
        android:layout_marginLeft="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textV2"
            android:text="@string/year"
            style="@style/videoPlayerText" />

        <TextView
            android:id="@+id/textV3"
            android:layout_marginLeft="130dp"
            style="@style/videoPlayerText"
            android:layout_gravity="center_horizontal"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/textV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/videoPlayerText"
            android:gravity="end"
            android:layout_marginRight="16dp"
            android:text="@string/agegroup"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/frag1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/des"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:fontFamily="sans-serif-condensed-light"/>

        <TextView
            android:paddingLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starring"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"/>

            <TextView
                android:paddingLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-light"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/frag1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">
            <ImageView
                android:id="@+id/shareV"
                android:paddingTop="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_share"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:id="@+id/wishV"
                android:paddingTop="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_wishlist"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:id="@+id/downloadV"
                android:paddingTop="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_downloads"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>