<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backdown"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DownloadsFragment">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_margin="16dp"
      android:background="#8C8E8E"
      app:cardCornerRadius="4dp"
      android:elevation="12dp"
      tools:targetApi="lollipop" >

      <EditText
          android:id="@+id/searchTitle"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:hint="Title(Required)" />

  </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#8C8E8E"
            app:cardCornerRadius="4dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/searchYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/yearSearch" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <Button
                android:textColor="#ffffff"
                android:id="@+id/searchButtonMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#383839"
                android:textSize="24sp"
                android:text="@string/searchButtonMain"
                android:fontFamily="@font/invited"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/templet"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_margin="16dp"
        android:elevation="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/appicon" />

            <TextView
                android:layout_marginTop="12dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/imageView"
                android:id="@+id/textView"
                android:textSize="16sp"
                android:fontFamily="@font/quaris"
                android:layout_width="194dp"
                android:layout_height="53dp"
                android:text="@string/title"
                android:layout_toEndOf="@id/imageView" />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/imageView"
                android:layout_below="@id/textView"
                android:fontFamily="sans-serif-condensed-light"
                android:id="@+id/textView2"
                android:layout_width="191dp"
                android:layout_height="30dp"
                android:text="@string/genre" />

            <TextView
                android:layout_toRightOf="@+id/imageView"
                android:fontFamily="sans-serif-condensed-light"
                android:id="@+id/textView3"
                android:layout_below="@id/textView2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_width="193dp"
                android:layout_height="24dp"
                android:text="@string/year" />

            <TextView
                android:layout_toRightOf="@id/imageView"
                android:layout_below="@id/textView3"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed-light"
                android:id="@+id/textView4"
                android:layout_width="192dp"
                android:layout_height="53dp"
                android:text="@string/moreinfo" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>