<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    android:elevation="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg">

        <ImageView
            android:id="@+id/iS"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/iT1"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/iS"
            android:fontFamily="@font/neo_latina"
            android:text="Error"
            android:textSize="24sp"
            android:layout_toEndOf="@id/iS" />

        <TextView
            android:id="@+id/iT2"
            android:layout_width="191dp"
            android:layout_height="30dp"
            android:layout_below="@id/iT1"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/iS"
            android:fontFamily="@font/neo_latina"
            android:text="@string/genre"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/iT3"
            android:layout_width="193dp"
            android:layout_height="24dp"
            android:layout_below="@id/iT2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/iS"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/year" />

        <TextView
            android:id="@+id/iT4"
            android:layout_width="192dp"
            android:layout_height="53dp"
            android:layout_below="@id/iT3"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/iS"
            android:fontFamily="@font/neo_latina"
            android:text="@string/moreinfo" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>