<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg"
    android:orientation="vertical"
    android:id="@+id/aboutLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imageA"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/appicon" />

            <TextView
                android:id="@+id/textA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imageA"
                android:text="@string/app_name"
                android:textColor="@color/frag1"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textA"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/imageA"
                android:text="@string/version"
                android:textColor="@color/frag1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textA2"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/imageA"
                android:text="@string/Rating" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Developer" />

            <TextView
                android:id="@+id/nameA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/frag1"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/instaA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/insta" />

            <ImageView
                android:id="@+id/twitterA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/youtubeA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/youtube" />

            <ImageView
                android:id="@+id/linkedinA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/linkedin" />

            <ImageView
                android:id="@+id/githubA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/github1" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>